[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic-wormhole = { git = "https://github.com/magic-wormhole/magic-wormhole.rs" }
web-sys = { version = "0.3.61" }
js-sys = { version = "0.3.61" }
yew = { version = "0.20.0", features = ["csr"] }
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.34"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
